# buildbanner

./: .gitignore  CLAUDE.md  LICENSE  Makefile  buildbanner-design-spec.md  package-lock.json  package.json  tasks.md  vitest.config.js
client/: buildbanner.js  package.json  vitest.config.js
client/scripts/: build-css.js  check-size.js  size-budget.js
client/src/: cache.js  clipboard.js  config.js  dismiss.js  dom.js  env-hide.js  fetch.js  links.js  logger.js  main.js  polling.js  push.js  segments.js  sha-color.js  style-constants.json  theme-observer.js  theme.js  time.js  token-warnings.js
client/tests/: accessibility.test.js  build.test.js  bundle.test.js  cache.test.js  clipboard.test.js  config.test.js  dismiss.test.js  dom.test.js  env-hide.test.js  fetch.test.js  helpers.js  lifecycle.test.js  links.test.js  logger.test.js  main.test.js  polling.test.js  push.test.js  segments.test.js  sha-color.test.js  theme-observer.test.js  theme.test.js  time.test.js  token-warnings.test.js
docs/: README.md  configuration.md  csp.md  security.md  self-hosting.md
examples/express-app/: app.js
node/: hono.js  index.js  koa.js  package.json  server.js
python/: README.md  pyproject.toml
python/buildbanner/: __init__.py  core.py  django.py  fastapi.py  flask.py  wsgi.py
python/tests/: conftest.py  test_core.py  test_django.py  test_fastapi.py  test_flask.py  test_packaging.py  test_wsgi.py
ruby/: Gemfile  README.md  buildbanner.gemspec
shared/: README.md  env-vars.md  schema.json  test_fixtures.json
tests/: docs.test.js  helpers.js  scaffold.test.js  schema.test.js  static-example.test.js
(+26 files in other folders)
